# jpgtofits

./: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  config.h.in  configure  configure.ac  jpgtofits
doc/: Makefile.am  Makefile.in  jpgtofits.info  jpgtofits.texi  version.texi
src/: Makefile.am  Makefile.in  anothername.sh  argpparser.h  main.c  main.h  readjpg.c  readjpg.h  simple.sh  ui.c  ui.h
