## Process this file with automake to produce Makefile.in
##
## Hand written file: used as input into Autotools.
##
## NOTE:
## This file will be called by the Makefile.am in the top directory,
## so this file does not need to be called directly by automake to
## make the full FITStoJPG package.
##
## This is the automake instructions to build FITStoJPG.  FITStoJPG
## will convert a FITS image to a JPEG image. It is free software
## released under GNU GPLv3+.
##
## Copyright (C) 2014 Mohammad Akhlaghi
## Tohoku University Astronomical Institute, Sendai, Japan.
## http://astr.tohoku.ac.jp/~akhlaghi/

info_TEXINFOS = jpgtofits.texi
